--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wanderlust",
+  "name": "movie_app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "appwrite": "^18.2.0",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -32,6 +33,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-appwrite": "^0.11.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
